@@ -1,0 +1,1 @@
+usr/lib/smuxi/smuxi-frontend-gnome-irc.dll*
