@@ -311,18 +311,30 @@ install-base:
 install-debug-all: debug-all install-base
 	$(COPY) $(COMMON_DEBUG_TARGET)*      $(INSTALL_DIR)
 	$(COPY) $(ENGINE_DEBUG_TARGET)*      $(INSTALL_DIR)
+	$(COPY) $(ENGINE_IRC_DEBUG_TARGET)*  $(INSTALL_DIR)
+	$(COPY) $(ENGINE_XMPP_DEBUG_TARGET)* $(INSTALL_DIR)
 	$(COPY) $(SERVER_DEBUG_TARGET)*      $(INSTALL_DIR)
 	$(COPY) $(FRONTEND_DEBUG_TARGET)*    $(INSTALL_DIR)
 	$(COPY) $(GTK_DEBUG_TARGET)*         $(INSTALL_DIR)
+	$(COPY) $(GTK_IRC_DEBUG_TARGET)*     $(INSTALL_DIR)
+	$(COPY) $(GTK_XMPP_DEBUG_TARGET)*    $(INSTALL_DIR)
 	$(COPY) $(GNOME_DEBUG_TARGET)*       $(INSTALL_DIR)
+	$(COPY) $(GNOME_IRC_DEBUG_TARGET)*   $(INSTALL_DIR)
+	$(COPY) $(GNOME_XMPP_DEBUG_TARGET)*  $(INSTALL_DIR)
 
 install-release-all: release-all install-base
-	$(COPY) $(COMMON_RELEASE_TARGET)    $(INSTALL_DIR)
-	$(COPY) $(ENGINE_RELEASE_TARGET)    $(INSTALL_DIR)
-	$(COPY) $(SERVER_RELEASE_TARGET)    $(INSTALL_DIR)
-	$(COPY) $(FRONTEND_RELEASE_TARGET)  $(INSTALL_DIR)
-	$(COPY) $(GTK_RELEASE_TARGET)       $(INSTALL_DIR)
-	$(COPY) $(GNOME_RELEASE_TARGET)     $(INSTALL_DIR)
+	$(COPY) $(COMMON_RELEASE_TARGET)      $(INSTALL_DIR)
+	$(COPY) $(ENGINE_RELEASE_TARGET)      $(INSTALL_DIR)
+	$(COPY) $(ENGINE_IRC_RELEASE_TARGET)  $(INSTALL_DIR)
+	$(COPY) $(ENGINE_XMPP_RELEASE_TARGET) $(INSTALL_DIR)
+	$(COPY) $(SERVER_RELEASE_TARGET)      $(INSTALL_DIR)
+	$(COPY) $(FRONTEND_RELEASE_TARGET)    $(INSTALL_DIR)
+	$(COPY) $(GTK_RELEASE_TARGET)         $(INSTALL_DIR)
+	$(COPY) $(GTK_IRC_RELEASE_TARGET)     $(INSTALL_DIR)
+	$(COPY) $(GTK_XMPP_RELEASE_TARGET)    $(INSTALL_DIR)
+	$(COPY) $(GNOME_RELEASE_TARGET)       $(INSTALL_DIR)
+	$(COPY) $(GNOME_IRC_RELEASE_TARGET)   $(INSTALL_DIR)
+	$(COPY) $(GNOME_XMPP_RELEASE_TARGET)  $(INSTALL_DIR)
 
 clean:
 	rm -f ../bin/debug/*.mdb
